--- a/apps/words/index.html
+++ b/apps/words/index.html
@@ -855,6 +855,16 @@
 <script src="/js/scripts.js"></script>
 
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-129025395-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-129025395-1');
+</script>
+
+
 
 </body>
 </html>
