--- a/about/index.html
+++ b/about/index.html
@@ -21,7 +21,7 @@
 <meta name="description" content="" />
 <meta name="og:description" content="" />
 <meta name="og:title" content="About me | " />
-<title>"About me | "</title>
+<title>About me | </title>
 <link rel="icon" href="/img/favicon.png">
 
 <link rel="stylesheet" href="/css/bootstrap.min.css">
