--- a/apps/converters/temperature/index.html
+++ b/apps/converters/temperature/index.html
@@ -21,7 +21,7 @@
 <meta name="description" content="Υπολογιστής μετατροπής θερμοκρασίας. Συμπεριλαμβάνει βαθμούς Κελισίου, Φαρεναίτ και Κέλβιν." />
 <meta name="og:description" content="Υπολογιστής μετατροπής θερμοκρασίας. Συμπεριλαμβάνει βαθμούς Κελισίου, Φαρεναίτ και Κέλβιν." />
 <meta name="og:title" content="Μετατροπή Μεγεθών Θερμοκρασίας | " />
-<title>"Μετατροπή Μεγεθών Θερμοκρασίας | "</title>
+<title>Μετατροπή Μεγεθών Θερμοκρασίας | </title>
 <link rel="icon" href="/img/favicon.png">
 
 <link rel="stylesheet" href="/css/bootstrap.min.css">
