--- a/apps/converters/weight/index.html
+++ b/apps/converters/weight/index.html
@@ -21,7 +21,7 @@
 <meta name="description" content="Υπολογιστής μετατροπής βάρους για μετρικές μονάδες. Συμπεριλαμβάνει κιλά, ουγκιές, λίβρες και stones." />
 <meta name="og:description" content="Υπολογιστής μετατροπής βάρους για μετρικές μονάδες. Συμπεριλαμβάνει κιλά, ουγκιές, λίβρες και stones." />
 <meta name="og:title" content="Μετατροπή Μεγεθών Βάρους | " />
-<title>"Μετατροπή Μεγεθών Βάρους | "</title>
+<title>Μετατροπή Μεγεθών Βάρους | </title>
 <link rel="icon" href="/img/favicon.png">
 
 <link rel="stylesheet" href="/css/bootstrap.min.css">
