--- a/apps/economy/vat/index.html
+++ b/apps/economy/vat/index.html
@@ -21,7 +21,7 @@
 <meta name="description" content="Calculate the amount with VAT adjusted, and you can also deduct it from the amount." />
 <meta name="og:description" content="Calculate the amount with VAT adjusted, and you can also deduct it from the amount." />
 <meta name="og:title" content="Calculate VAT | " />
-<title>"Calculate VAT | "</title>
+<title>Calculate VAT | </title>
 <link rel="icon" href="/img/favicon.png">
 
 <link rel="stylesheet" href="/css/bootstrap.min.css">
