--- a/el/index.html
+++ b/el/index.html
@@ -22,7 +22,7 @@
 <meta name="description" content="Προσπαθούμε να δημιουργήσουμε απλούς και εύχρηστους υπολογιστές, μετατροπείς, εργαλεία και άλλες εφαρμογές για να διευκολύνετε τη ζωή σας." />
 <meta name="og:description" content="Προσπαθούμε να δημιουργήσουμε απλούς και εύχρηστους υπολογιστές, μετατροπείς, εργαλεία και άλλες εφαρμογές για να διευκολύνετε τη ζωή σας." />
 <meta name="og:title" content="Δωρεάν Xρήσιμες Eφαρμογές και Eργαλεία | " />
-<title>"Δωρεάν Xρήσιμες Eφαρμογές και Eργαλεία | "</title>
+<title>Δωρεάν Xρήσιμες Eφαρμογές και Eργαλεία | </title>
 <link rel="icon" href="/img/favicon.png">
 
 <link rel="stylesheet" href="/css/font-awesome.min.css">
