--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <meta name="description" content="We try to create simple and easy-to-use Calculators, Converters, Tools and other applications to make your life easier." />
 <meta name="og:description" content="We try to create simple and easy-to-use Calculators, Converters, Tools and other applications to make your life easier." />
 <meta name="og:title" content="Free Online Tools and Calculators | " />
-<title>"Free Online Tools and Calculators | "</title>
+<title>Free Online Tools and Calculators | </title>
 <link rel="icon" href="/img/favicon.png">
 
 <link rel="stylesheet" href="/css/font-awesome.min.css">
