--- a/apps/health/bmi/index.html
+++ b/apps/health/bmi/index.html
@@ -21,7 +21,7 @@
 <meta name="description" content="Yπολογιστε το ποσό με προσαρμοσμένο τον ΦΠΑ, και επίσης μπορείτε να τον αφαιρέσετε από το ποσό." />
 <meta name="og:description" content="Yπολογιστε το ποσό με προσαρμοσμένο τον ΦΠΑ, και επίσης μπορείτε να τον αφαιρέσετε από το ποσό." />
 <meta name="og:title" content="Υπολογισμός Δείκτη Μάζας Σώματος (BMI) | " />
-<title>"Υπολογισμός Δείκτη Μάζας Σώματος (BMI) | "</title>
+<title>Υπολογισμός Δείκτη Μάζας Σώματος (BMI) | </title>
 <link rel="icon" href="/img/favicon.png">
 
 <link rel="stylesheet" href="/css/bootstrap.min.css">
