--- a/el/apps/economy/loan/index.html
+++ b/el/apps/economy/loan/index.html
@@ -21,7 +21,7 @@
 <meta name="description" content="Υπολογίστε τη μηνιαία δόση που θα πληρώνετε για το δάνειό σας." />
 <meta name="og:description" content="Υπολογίστε τη μηνιαία δόση που θα πληρώνετε για το δάνειό σας." />
 <meta name="og:title" content="Υπολογισμός Aποπληρωμής Δανείου | " />
-<title>"Υπολογισμός Aποπληρωμής Δανείου | "</title>
+<title>Υπολογισμός Aποπληρωμής Δανείου | </title>
 <link rel="icon" href="/img/favicon.png">
 
 <link rel="stylesheet" href="/css/bootstrap.min.css">
