--- a/el/apps/words/words/index.html
+++ b/el/apps/words/words/index.html
@@ -21,7 +21,7 @@
 <meta name="description" content="Κάντε καταμέτρηση λέξεων και χαρακτήρων, στο κείμενο που θα γράψετε ή θα αντιγράψετε." />
 <meta name="og:description" content="Κάντε καταμέτρηση λέξεων και χαρακτήρων, στο κείμενο που θα γράψετε ή θα αντιγράψετε." />
 <meta name="og:title" content="Μέτρηση των λέξεων και των χαρακτήρων ενός κειμένου | " />
-<title>"Μέτρηση των λέξεων και των χαρακτήρων ενός κειμένου | "</title>
+<title>Μέτρηση των λέξεων και των χαρακτήρων ενός κειμένου | </title>
 <link rel="icon" href="/img/favicon.png">
 
 <link rel="stylesheet" href="/css/bootstrap.min.css">
