--- a/apps/economy/vat/index.html
+++ b/apps/economy/vat/index.html
@@ -1076,7 +1076,7 @@
               
               
             <tr>
-            <td id="app1_results_title_1">ΦΠΑ 24%</td>
+            <td id="app1_results_title_1">VAT</td>
             <td class="text-right">
               <span id="app1_results_span_content_1">$9.6</span>
               <span id="app1_results_span_content_sign_1"></span>    
