--- a/el/apps/health/bmi/index.html
+++ b/el/apps/health/bmi/index.html
@@ -18,8 +18,8 @@
 
 
 
-<meta name="description" content="Yπολογιστε το ποσό με προσαρμοσμένο τον ΦΠΑ, και επίσης μπορείτε να τον αφαιρέσετε από το ποσό." />
-<meta name="og:description" content="Yπολογιστε το ποσό με προσαρμοσμένο τον ΦΠΑ, και επίσης μπορείτε να τον αφαιρέσετε από το ποσό." />
+<meta name="description" content="Ο ΔΜΣ είναι μία γενική ιατρική ένδειξη για τον υπολογισμό του βαθμού παχυσαρκίας ενός ατόμου. Υπολογίστε τον δικό σας δείκτη." />
+<meta name="og:description" content="Ο ΔΜΣ είναι μία γενική ιατρική ένδειξη για τον υπολογισμό του βαθμού παχυσαρκίας ενός ατόμου. Υπολογίστε τον δικό σας δείκτη." />
 <meta name="og:title" content="Υπολογισμός Δείκτη Μάζας Σώματος (BMI) | " />
 <title>Υπολογισμός Δείκτη Μάζας Σώματος (BMI) | </title>
 <link rel="icon" href="/img/favicon.png">
@@ -1050,7 +1050,7 @@
               
               
             <tr>
-            <td id="app3_results_title_0">Δείκτης BMI</td>
+            <td id="app3_results_title_0">Δείκτης ΔΜΣ</td>
             <td class="text-right">
               <span id="app3_results_span_content_0">24.5</span>
               <span id="app3_results_span_content_sign_0"></span>    
