--- a/apps/health/bmi/index.html
+++ b/apps/health/bmi/index.html
@@ -837,7 +837,7 @@
      
 
     <div class="navigation">
-        <a href="/">
+        <a href='/'>
             <button type="button" class="btn-change">Back</button>             
         </a>
         <button type="button" class="btn-change" data-toggle="modal" data-target="#similarApps">Similar Apps</button>
