--- a/el/apps/words/words/index.html
+++ b/el/apps/words/words/index.html
@@ -837,7 +837,7 @@
     
 
     <div class="navigation">
-        <a href="/">
+        <a href='/el'>
             <button type="button" class="btn-change">Πισω</button>             
         </a>
         <button type="button" class="btn-change" data-toggle="modal" data-target="#similarApps">Παρομοιες Εφαρμογες</button>
