--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 <link rel="stylesheet" href="/css/font-awesome.min.css">
 <link href="/css/styles.css" rel="stylesheet">
 <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Unna:400,400i,700|Montserrat:400,700|Lora:400,700">
-
+<script>
+console.log("");
+</script>
 
 
 
