--- a/apps/converters/temperature/index.html
+++ b/apps/converters/temperature/index.html
@@ -21,7 +21,7 @@
 <meta name="description" content="Temperature conversion calculator. It includes units of Celsius, Farenait and Kelvin." />
 <meta name="og:description" content="Temperature conversion calculator. It includes units of Celsius, Farenait and Kelvin." />
 <meta name="og:title" content="Conversion of temperature units | " />
-<title>Conversion of temperature units | </title>
+<title>Conversion of temperature units | freewebtools.ga </title>
 <link rel="icon" href="/img/favicon.png">
 
 <link rel="stylesheet" href="/css/bootstrap.min.css">
@@ -29,7 +29,6 @@
 <link rel="stylesheet" href="/css/font-awesome.min.css">
 <link href="/css/styles.css" rel="stylesheet">
 <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Unna:400,400i,700|Montserrat:400,700|Lora:400,700">
-
 
 
 </head>
