--- a/el/apps/economy/φπα/index.html
+++ b/el/apps/economy/φπα/index.html
@@ -21,7 +21,7 @@
 <meta name="description" content="Yπολογιστε το ποσό με προσαρμοσμένο τον ΦΠΑ, και επίσης μπορείτε να τον αφαιρέσετε από το ποσό." />
 <meta name="og:description" content="Yπολογιστε το ποσό με προσαρμοσμένο τον ΦΠΑ, και επίσης μπορείτε να τον αφαιρέσετε από το ποσό." />
 <meta name="og:title" content="Υπολογισμός ΦΠΑ | " />
-<title>Υπολογισμός ΦΠΑ | </title>
+<title>Υπολογισμός ΦΠΑ | freewebtools.ga </title>
 <link rel="icon" href="/img/favicon.png">
 
 <link rel="stylesheet" href="/css/bootstrap.min.css">
@@ -29,7 +29,6 @@
 <link rel="stylesheet" href="/css/font-awesome.min.css">
 <link href="/css/styles.css" rel="stylesheet">
 <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Unna:400,400i,700|Montserrat:400,700|Lora:400,700">
-
 
 
 </head>
