--- a/el/apps/health/δμσ/index.html
+++ b/el/apps/health/δμσ/index.html
@@ -21,7 +21,7 @@
 <meta name="description" content="Ο ΔΜΣ είναι μία γενική ιατρική ένδειξη για τον υπολογισμό του βαθμού παχυσαρκίας ενός ατόμου. Υπολογίστε τον δικό σας δείκτη." />
 <meta name="og:description" content="Ο ΔΜΣ είναι μία γενική ιατρική ένδειξη για τον υπολογισμό του βαθμού παχυσαρκίας ενός ατόμου. Υπολογίστε τον δικό σας δείκτη." />
 <meta name="og:title" content="Υπολογισμός Δείκτη Μάζας Σώματος (BMI) | " />
-<title>Υπολογισμός Δείκτη Μάζας Σώματος (BMI) | </title>
+<title>Υπολογισμός Δείκτη Μάζας Σώματος (BMI) | freewebtools.ga </title>
 <link rel="icon" href="/img/favicon.png">
 
 <link rel="stylesheet" href="/css/bootstrap.min.css">
@@ -29,7 +29,6 @@
 <link rel="stylesheet" href="/css/font-awesome.min.css">
 <link href="/css/styles.css" rel="stylesheet">
 <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Unna:400,400i,700|Montserrat:400,700|Lora:400,700">
-
 
 
 </head>
