--- a/el/index.html
+++ b/el/index.html
@@ -22,13 +22,12 @@
 <meta name="description" content="Προσπαθούμε να δημιουργήσουμε απλούς και εύχρηστους υπολογιστές, μετατροπείς, εργαλεία και άλλες εφαρμογές για να διευκολύνετε τη ζωή σας." />
 <meta name="og:description" content="Προσπαθούμε να δημιουργήσουμε απλούς και εύχρηστους υπολογιστές, μετατροπείς, εργαλεία και άλλες εφαρμογές για να διευκολύνετε τη ζωή σας." />
 <meta name="og:title" content="Δωρεάν Xρήσιμες Eφαρμογές και Eργαλεία | " />
-<title>Δωρεάν Xρήσιμες Eφαρμογές και Eργαλεία | </title>
+<title>Δωρεάν Xρήσιμες Eφαρμογές και Eργαλεία | freewebtools.ga </title>
 <link rel="icon" href="/img/favicon.png">
 
 <link rel="stylesheet" href="/css/font-awesome.min.css">
 <link href="/css/styles.css" rel="stylesheet">
 <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Unna:400,400i,700|Montserrat:400,700|Lora:400,700">
-
 
 
 
