--- a/index.html
+++ b/index.html
@@ -22,13 +22,12 @@
 <meta name="description" content="We try to create simple and easy-to-use Calculators, Converters, Tools and other applications to make your life easier." />
 <meta name="og:description" content="We try to create simple and easy-to-use Calculators, Converters, Tools and other applications to make your life easier." />
 <meta name="og:title" content="Free Online Tools and Calculators | " />
-<title>Free Online Tools and Calculators | </title>
+<title>Free Online Tools and Calculators | freewebtools.ga </title>
 <link rel="icon" href="/img/favicon.png">
 
 <link rel="stylesheet" href="/css/font-awesome.min.css">
 <link href="/css/styles.css" rel="stylesheet">
 <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Unna:400,400i,700|Montserrat:400,700|Lora:400,700">
-
 
 
 
