--- a/apps/economy/loan/index.html
+++ b/apps/economy/loan/index.html
@@ -21,7 +21,7 @@
 <meta name="description" content="Calculate the monthly installment you will pay for your loan." />
 <meta name="og:description" content="Calculate the monthly installment you will pay for your loan." />
 <meta name="og:title" content="Calculation of Loan Repayment | " />
-<title>Calculation of Loan Repayment | </title>
+<title>Calculation of Loan Repayment | freewebtools.ga </title>
 <link rel="icon" href="/img/favicon.png">
 
 <link rel="stylesheet" href="/css/bootstrap.min.css">
@@ -29,7 +29,6 @@
 <link rel="stylesheet" href="/css/font-awesome.min.css">
 <link href="/css/styles.css" rel="stylesheet">
 <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Unna:400,400i,700|Montserrat:400,700|Lora:400,700">
-
 
 
 </head>
