--- a/apps/economy/vat/index.html
+++ b/apps/economy/vat/index.html
@@ -21,7 +21,7 @@
 <meta name="description" content="Calculate the amount with VAT adjusted, and you can also deduct it from the amount." />
 <meta name="og:description" content="Calculate the amount with VAT adjusted, and you can also deduct it from the amount." />
 <meta name="og:title" content="Calculate VAT | " />
-<title>Calculate VAT | </title>
+<title>Calculate VAT | freewebtools.ga </title>
 <link rel="icon" href="/img/favicon.png">
 
 <link rel="stylesheet" href="/css/bootstrap.min.css">
@@ -29,7 +29,6 @@
 <link rel="stylesheet" href="/css/font-awesome.min.css">
 <link href="/css/styles.css" rel="stylesheet">
 <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Unna:400,400i,700|Montserrat:400,700|Lora:400,700">
-
 
 
 </head>
