--- a/apps/health/bmi/index.html
+++ b/apps/health/bmi/index.html
@@ -21,7 +21,7 @@
 <meta name="description" content="BMI is a general medical indication for calculating the degree of obesity of a person. Calculate your own index." />
 <meta name="og:description" content="BMI is a general medical indication for calculating the degree of obesity of a person. Calculate your own index." />
 <meta name="og:title" content="Calculation of the Body Mass Index (BMI) | " />
-<title>Calculation of the Body Mass Index (BMI) | </title>
+<title>Calculation of the Body Mass Index (BMI) | freewebtools.ga </title>
 <link rel="icon" href="/img/favicon.png">
 
 <link rel="stylesheet" href="/css/bootstrap.min.css">
@@ -29,7 +29,6 @@
 <link rel="stylesheet" href="/css/font-awesome.min.css">
 <link href="/css/styles.css" rel="stylesheet">
 <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Unna:400,400i,700|Montserrat:400,700|Lora:400,700">
-
 
 
 </head>
