--- a/apps/words/words/index.html
+++ b/apps/words/words/index.html
@@ -21,7 +21,7 @@
 <meta name="description" content="Count words and characters in the text you will write or copy." />
 <meta name="og:description" content="Count words and characters in the text you will write or copy." />
 <meta name="og:title" content="Calculation of words and characters of a text | " />
-<title>Calculation of words and characters of a text | </title>
+<title>Calculation of words and characters of a text | freewebtools.ga </title>
 <link rel="icon" href="/img/favicon.png">
 
 <link rel="stylesheet" href="/css/bootstrap.min.css">
@@ -29,7 +29,6 @@
 <link rel="stylesheet" href="/css/font-awesome.min.css">
 <link href="/css/styles.css" rel="stylesheet">
 <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Unna:400,400i,700|Montserrat:400,700|Lora:400,700">
-
 
 
 </head>
