--- a/el/apps/converters/βάρος/index.html
+++ b/el/apps/converters/βάρος/index.html
@@ -21,7 +21,7 @@
 <meta name="description" content="Υπολογιστής μετατροπής βάρους για μετρικές μονάδες. Συμπεριλαμβάνει κιλά, ουγκιές, λίβρες και stones." />
 <meta name="og:description" content="Υπολογιστής μετατροπής βάρους για μετρικές μονάδες. Συμπεριλαμβάνει κιλά, ουγκιές, λίβρες και stones." />
 <meta name="og:title" content="Μετατροπή Μεγεθών Βάρους | " />
-<title>Μετατροπή Μεγεθών Βάρους | </title>
+<title>Μετατροπή Μεγεθών Βάρους | freewebtools.ga </title>
 <link rel="icon" href="/img/favicon.png">
 
 <link rel="stylesheet" href="/css/bootstrap.min.css">
@@ -29,7 +29,6 @@
 <link rel="stylesheet" href="/css/font-awesome.min.css">
 <link href="/css/styles.css" rel="stylesheet">
 <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Unna:400,400i,700|Montserrat:400,700|Lora:400,700">
-
 
 
 </head>
