--- a/el/apps/economy/δόσεις/index.html
+++ b/el/apps/economy/δόσεις/index.html
@@ -21,7 +21,7 @@
 <meta name="description" content="Υπολογίστε τη μηνιαία δόση που θα πληρώνετε για το δάνειό σας." />
 <meta name="og:description" content="Υπολογίστε τη μηνιαία δόση που θα πληρώνετε για το δάνειό σας." />
 <meta name="og:title" content="Υπολογισμός Aποπληρωμής Δανείου | " />
-<title>Υπολογισμός Aποπληρωμής Δανείου | </title>
+<title>Υπολογισμός Aποπληρωμής Δανείου | freewebtools.ga </title>
 <link rel="icon" href="/img/favicon.png">
 
 <link rel="stylesheet" href="/css/bootstrap.min.css">
@@ -29,7 +29,6 @@
 <link rel="stylesheet" href="/css/font-awesome.min.css">
 <link href="/css/styles.css" rel="stylesheet">
 <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Unna:400,400i,700|Montserrat:400,700|Lora:400,700">
-
 
 
 </head>
