--- a/el/apps/words/λέξεις/index.html
+++ b/el/apps/words/λέξεις/index.html
@@ -21,7 +21,7 @@
 <meta name="description" content="Κάντε καταμέτρηση λέξεων και χαρακτήρων, στο κείμενο που θα γράψετε ή θα αντιγράψετε." />
 <meta name="og:description" content="Κάντε καταμέτρηση λέξεων και χαρακτήρων, στο κείμενο που θα γράψετε ή θα αντιγράψετε." />
 <meta name="og:title" content="Μέτρηση των λέξεων και των χαρακτήρων ενός κειμένου | " />
-<title>Μέτρηση των λέξεων και των χαρακτήρων ενός κειμένου | </title>
+<title>Μέτρηση των λέξεων και των χαρακτήρων ενός κειμένου | freewebtools.ga </title>
 <link rel="icon" href="/img/favicon.png">
 
 <link rel="stylesheet" href="/css/bootstrap.min.css">
@@ -29,7 +29,6 @@
 <link rel="stylesheet" href="/css/font-awesome.min.css">
 <link href="/css/styles.css" rel="stylesheet">
 <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Unna:400,400i,700|Montserrat:400,700|Lora:400,700">
-
 
 
 </head>
