--- a/apps/mathematics/age/index.html
+++ b/apps/mathematics/age/index.html
@@ -701,7 +701,7 @@
      <div class="col-md-6">  
       <div class="panel panel-default">
         <div class="panel-heading">
-          <h3 class="panel-title">Write the text or copy / paste to calculate the number of characters and words in it.</h3>
+          <h3 class="panel-title">Enter the date of birth, and after the date you would like to find the difference from birth. If you do not enter the second date, the difference will be calculated from today.</h3>
         </div>
         <div class="panel-body">
           <form id="app7_form">
