--- a/el/apps/mathematics/ηλικία/index.html
+++ b/el/apps/mathematics/ηλικία/index.html
@@ -701,7 +701,7 @@
      <div class="col-md-6">  
       <div class="panel panel-default">
         <div class="panel-heading">
-          <h3 class="panel-title">Γράψτε το κείμενο ή κάντε το copy / paste , για να μετρηθεί ο αριθμός των χαρακτήρνων και λέξεων σε αυτό.</h3>
+          <h3 class="panel-title">Εισάγεται την ημερομηνία της γέννησης, και μετά την ημερομηνία που θα θέλατε να βρείτε την διαφορά από την γέννηση. ΆΜα δεν εισάγετε την δεύτερη ημερομηνία , θα υπολογιστεί η διαφορά από την σημερινή ημέρα.</h3>
         </div>
         <div class="panel-body">
           <form id="app7_form">
