--- a/index.html
+++ b/index.html
@@ -1014,7 +1014,7 @@
             
             <div class="entry conversions">
                 <a href="/apps/converters/currency/">
-                    <div class="entry__image" data-bg="/img/works/app1_vat_en.png"></div>
+                    <div class="entry__image" data-bg="/img/works/app9_currency_en.png"></div>
                     <div class="entry__content">
                         <div class="overlay">
                             <div class="overlay--caption bottom  ">
