--- a/el/apps/converters/μήκος/index.html
+++ b/el/apps/converters/μήκος/index.html
@@ -18,10 +18,10 @@
 
 
 
-<meta name="description" content="Lenght Conversion Calculator. It Supports all Units." />
-<meta name="og:description" content="Lenght Conversion Calculator. It Supports all Units." />
-<meta name="og:title" content="Conversion of Lenght Units | " />
-<title>Conversion of Lenght Units | freewebtools.ga </title>
+<meta name="description" content="Υπολογιστής μετατροπής μήκους. Υποστηρίζει όλες τις μονάδες." />
+<meta name="og:description" content="Υπολογιστής μετατροπής μήκους. Υποστηρίζει όλες τις μονάδες." />
+<meta name="og:title" content="Μετατροπή Μεγεθών Μήκους | " />
+<title>Μετατροπή Μεγεθών Μήκους | freewebtools.ga </title>
 <link rel="icon" href="/img/favicon.png">
 
 <link rel="stylesheet" href="/css/bootstrap.min.css">
